gccida/c1/insert_regs
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_regs/src/cse.c:1765:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v14.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_regs/src/cse.c:1769:52: error: expected ')'
if ( v15 != cached_regno || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_regs/src/cse.c:1769:29: note: to match this '('
if ( v15 != cached_regno || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_regs/src/cse.c:1769:75: error: expected expression
if ( v15 != cached_regno || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_regs/src/cse.c:1770:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( v15); 
 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_regs/src/cse.c:1830:24: error: use of undeclared identifier 'machine_mode'
make_new_qty( rtint, ( machine_mode)*( ( unsigned __int8 *)x + 2)); 
                       ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_regs/src/obj/cse.o] Error 1
